style: modify css to scss

--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -43,6 +43,9 @@
 
 // Z-index
   $z-index-header: 100;
+  $z-index-slider-button: 50;
+  $z-index-iphone-base: 5;
+  $z-index-iphone-screen: 10;
 
 // Other
   $header-height: calc(2em + 1.5625rem + 2em + 6px);
