--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,7 +1,7 @@
 
 .footer {
   padding: 1.375em 0 1.375em 0;
-  background-color: var(--color-footer-background);
+  background-color: $color-footer-background;
 }
 
 .footer__wrapper {
@@ -10,10 +10,3 @@
   align-items: center;
 }
 
-.footer__copyright {
-  font-size: 0.75rem;
-  line-height: 1;
-  font-weight: 400;
-  color: var(--color-footer-text);
-  letter-spacing: -0.005em;
-}
