feat: modify css to scss all sections

--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -42,10 +42,11 @@
   $content-padding-side: 2.5em;
 
 // Z-index
-  $z-index-header: 100;
-  $z-index-slider-button: 50;
+  $z-index-header: 50;
+  $z-index-slider-button: 20;
   $z-index-iphone-base: 5;
   $z-index-iphone-screen: 10;
+  $z-index-form-modal: 100;
 
 // Other
   $header-height: calc(2em + 1.5625rem + 2em + 6px);
