--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@
 @import "./sass/components/slider";
 @import "./sass/components/services";
 @import "./sass/components/portfolio";
+@import "./sass/components/socials-list";
 @import "./sass/components/about-us";
 @import "./sass/components/get-a-quote";
 @import "./sass/components/form-modal";
