--- a/sass/components/_get-a-quote.scss
+++ b/sass/components/_get-a-quote.scss
@@ -1,26 +1,24 @@
 
 .quote {
   padding: 3.85em 0 1.2em 0;
-  background-color: var(--color-quote-background);
-  border-bottom: 6px solid var(--color-quote-border);
-  scroll-margin-top: var(--header-height);
+  background-color: $color-quote-background;
+  border-bottom: 6px solid $color-quote-border;
+  scroll-margin-top: $header-height;
 }
 
 .quote__title {
-  color: var(--color-quote-title);
+  color: $color-quote-title;
   letter-spacing: -0.005em;
-}
 
-.quote__title > .pixel-perfect {
-  text-transform: initial;
+  & > .pixel-perfect {
+    text-transform: initial;
+  }
 }
 
 .quote__text {
   margin-top: 1.175em;
-  font-size: 1.125rem;
-  line-height: 1.67;
-  font-weight: 300;
-  color: var(--color-quote-text);
+  @include font ($size: 1.125rem, $height: 1.67, $weight: 300);
+  color: $color-quote-text;
 }
 
 .flex-2-column {
@@ -38,49 +36,47 @@
 
 .form__input {
   padding: 0.66667em 1.25em;
-  border-radius: 0.41667em;
+  border-radius: 5px;
   border: none;
-  background-color: var(--color-quote-input-background);
-  font-size: 0.75rem;
-  line-height: 1.84;
-  font-weight: 400;
-  color: var(--color-quote-input-text);
+  background-color: $color-quote-input-background;
+  @include font ($size: 0.75rem, $height: 1.84, $weight: 400);
+  color: $color-quote-input-text;
   overflow: hidden;
-  transition: background-color 0.4s linear, color 0.4s linear;
+  @extend %transition-bgColor-color-400-linear;
+
+  &::-ms-input-placeholder {
+    color: inherit;
+  }
+  
+  &::placeholder {
+    color: inherit;
+  }
+  
+  &:hover {
+    background-color: #ad423d;
+  }
+  
+  &:focus {
+    color: $color-quote-title;
+    outline: 1px solid $color-outline;
+    outline-offset: 2px;
+  }
+  
+  &:required:focus:not(:placeholder-shown):valid {
+    padding: calc(0.66667em - 2px) calc(1.25em - 2px);
+    border: 2px solid green;
+    outline: none;
+  }
+  
+  &:required:focus:not(:placeholder-shown):invalid {
+    padding: calc(0.66667em - 2px) calc(1.25em - 2px);
+    border: 2px solid red;
+    outline: none;
+  }
 }
 
 .form__input + .form__input {
   margin-top: 1rem;
-}
-
-.form__input::-ms-input-placeholder {
-  color: inherit;
-}
-
-.form__input::placeholder {
-  color: inherit;
-}
-
-.form__input:hover {
-  background-color: #ad423d;
-}
-
-.form__input:focus {
-  color: var(--color-quote-title);
-  outline: 1px solid var(--color-outline);
-  outline-offset: 2px;
-}
-
-.form__input:required:focus:not(:placeholder-shown):valid {
-  padding: calc(0.66667em - 2px) calc(1.25em - 2px);
-  border: 2px solid green;
-  outline: none;
-}
-
-.form__input:required:focus:not(:placeholder-shown):invalid {
-  padding: calc(0.66667em - 2px) calc(1.25em - 2px);
-  border: 2px solid red;
-  outline: none;
 }
 
 .form__input--textarea {
@@ -91,24 +87,24 @@
   overflow-y: scroll;
   resize: none;
   cursor: auto;
-}
 
-.form__input--textarea::-webkit-scrollbar {
-  width: 0.85em;
-}
-
-.form__input--textarea::-webkit-scrollbar-thumb {
-  border-radius: 0.41667em;
-  background-color: var(--color-quote-text);
-}
-
-.form__input--textarea:not(:focus)::-webkit-scrollbar-thumb {
-  display: none;
-}
-
-.form__input--textarea::-webkit-scrollbar-track {
-  background-color: inherit;
-  border-radius: 0.41667em;
+  &::-webkit-scrollbar {
+    width: 0.85em;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: $color-quote-text;
+  }
+  
+  &:not(:focus)::-webkit-scrollbar-thumb {
+    display: none;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: inherit;
+    border-radius: 5px;
+  }
 }
 
 .form__submit {
@@ -116,25 +112,23 @@
   flex-grow: 0;
   width: max-content;
   border: 1px solid transparent;
-  background-color: #FBC65F;
-  font-size: 0.875rem;
+  background-color: $color-outline;
+  @include font ($size: 0.875rem, $height: 1, $weight: 700);
   color:  #886A30;
-  line-height: 1;
-  font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
-  transition: all 0.3s linear;
-}
+  @extend %transition-all-400-linear;
 
-.form__submit:active {
-  border-color: var(--color-quote-title);
-  outline: none;
-}
-
-.form__submit:hover {
-  color: var(--color-quote-title);
-  background-color: var(--color-footer-background);
-  outline: none;
+  &:active {
+    border-color: $color-quote-title;
+    outline: none;
+  }
+  
+  &:hover {
+    color: $color-quote-title;
+    background-color: $color-footer-background;
+    outline: none;
+  }
 }
 
 .contacts {
@@ -142,22 +136,20 @@
 }
 
 .contacts__title {
-  color: var(--color-quote-title);
+  color: $color-quote-title;
   letter-spacing: -0.002em;
 }
 
 .contacts__text {
   margin-top: 0.85em;
-  font-size: 0.75rem;
-  line-height: 1.8334;
-  font-weight: 400;
-  color: var(--color-quote-text);
+  @include font ($size: 0.75rem, $height: 1.8334, $weight: 400);
+  color: $color-quote-text;
   text-align: justify;
   letter-spacing: -0.02em;
-}
 
-.contacts__text::first-line {
-  line-height: 1.75;
+  &::first-line {
+    line-height: 1.75;
+  }
 }
 
 .contacts-list {
@@ -169,53 +161,51 @@
   position: relative;
   padding-left: 0.33333em;
   padding-right: 0.33333em;
-  border-radius: 0.4em;
-  font-size: 0.75rem;
-  line-height: 1.6;
-  font-weight: 400;
-  color: var(--color-quote-text);
+  border-radius: 4px;
+  @include font ($size: 0.75rem, $height: 1.6, $weight: 400);
+  color: $color-quote-text;
   letter-spacing: 0.005em;
-}
 
-.contact-link.pixel-perfect {
-  line-height: 2.1;
-  letter-spacing: -0.01em;
-}
+  &.pixel-perfect {
+    line-height: 2.1;
+    letter-spacing: -0.01em;
+  }
 
-.contact-link::before {
-  content: '';
-  display: block;
-  position: absolute;
-  left: -0.75em;
-  bottom: +2px;
-  background-size: initial;
-  background-repeat: no-repeat;
-  transform: translateX(calc(-50% - 0.5px));
-}
-
-.contact-link--location::before {
-  width: 7px;
-  height: 11px;
-  background-image: url(./assets/images/location.svg);
-}
-
-.contact-link--phone::before {
-  width: 11px;
-  height: 11px;
-  background-image: url(./assets/images/phone.svg);
-}
-
-.contact-link--mail::before {
-  width: 13px;
-  height: 8px;
-  background-image: url(./assets/images/mail.svg);
-}
-
-.contact-link:hover {
-  text-decoration: underline;
-}
-
-.contact-link:active {
-  background-color: var(--color-quote-input-background);
-  transition: background-color 0.2s linear;
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: -0.75em;
+    bottom: +2px;
+    background-size: initial;
+    background-repeat: no-repeat;
+    transform: translateX(calc(-50% - 0.5px));
+  }
+  
+  &--location::before {
+    width: 7px;
+    height: 11px;
+    background-image: url(./assets/images/location.svg);
+  }
+  
+  &--phone::before {
+    width: 11px;
+    height: 11px;
+    background-image: url(./assets/images/phone.svg);
+  }
+  
+  &--mail::before {
+    width: 13px;
+    height: 8px;
+    background-image: url(./assets/images/mail.svg);
+  }
+  
+  &:hover {
+    text-decoration: underline;
+  }
+  
+  &:active {
+    background-color: $color-quote-input-background;
+    @extend %transition-bgColor-150-linear;
+  }
 }
