--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,23 +1,23 @@
 
+$margin-right-features-list__item: 1.25em;
+
 .services {
   padding: 3.9em 0 1.875em 0;
-  background-color: var(--color-services-background);
-  border-bottom: 6px solid var(--color-services-border);
-  scroll-margin-top: var(--header-height);
+  background-color: $color-services-background;
+  border-bottom: 6px solid $color-services-border;
+  scroll-margin-top: $header-height;
 }
 
 .services__title {
-  color: var(--color-services-title);
+  color: $color-services-title;
   word-spacing: 0.005em;
   letter-spacing: -0.003125em;
 }
 
 .services__text {
   margin-top: 1.125em;
-  font-size: 1.125rem;
-  line-height: 1.7;
-  font-weight: 300;
-  color: var(--color-services-text);
+  @include font ($size: 1.125rem, $height: 1.7, $weight: 300);
+  color: $color-services-text;
 }
 
 .services__features {
@@ -29,73 +29,70 @@
   justify-content: space-between;
   flex-shrink: 1;
   flex-wrap: wrap;
-}
 
-.features-list.pixel-perfect {
-  margin-left: 0.0625em;
-  margin-right: 0.0625em;
+  &.pixel-perfect {
+    margin-left: 1px;
+    margin-right: 1px;
+  }
 }
 
 .features-list__item {
-  --margin-right-features-list__item: 1.25em;
-  max-width: calc((100% - 2 * var(--margin-right-features-list__item)) / 3);
+  max-width: calc((100% - 2 * #{$margin-right-features-list__item}) / 3);
 }
 
 .feature-tile {
   margin-bottom: 1.875em;
   padding-left: 5em;
   position: relative;
-}
 
-.feature-tile::before {
-  content: '';
-  display: block;
-  width: 59px;
-  height: 59px;
-  position: absolute;
-  left: 0;
-  top: 0.125em;
-  border-radius: 50%;
-  border: 2px solid var(--color-services-title);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: initial;
-}
+  &::before {
+    content: '';
+    display: block;
+    width: 59px;
+    height: 59px;
+    position: absolute;
+    left: 0;
+    top: 2px;
+    border-radius: 50%;
+    border: 2px solid $color-services-title;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: initial;
+  }
 
-.feature-tile--pen::before {
-  background-image: url(./assets/images/pen.svg);
-}
-
-.feature-tile--bulb::before {
-  background-image: url(./assets/images/bulb.svg);
-}
-
-.feature-tile--heart::before {
-  background-image: url(./assets/images/heart.svg);
-}
-
-.feature-tile--mobile::before {
-  background-image: url(./assets/images/mobile.svg);
-}
-
-.feature-tile--bubble::before {
-  background-image: url(./assets/images/bubble.svg);
-}
-
-.feature-tile--star::before {
-  background-image: url(./assets/images/star.svg);
+  &--pen::before {
+    background-image: url(./assets/images/pen.svg);
+  }
+  
+  &--bulb::before {
+    background-image: url(./assets/images/bulb.svg);
+  }
+  
+  &--heart::before {
+    background-image: url(./assets/images/heart.svg);
+  }
+  
+  &--mobile::before {
+    background-image: url(./assets/images/mobile.svg);
+  }
+  
+  &--bubble::before {
+    background-image: url(./assets/images/bubble.svg);
+  }
+  
+  &--star::before {
+    background-image: url(./assets/images/star.svg);
+  }
 }
 
 .feature-tile__title {
-  color: var(--color-services-title);
+  color: $color-services-title;
   letter-spacing: 0.001em;  
 }
 
 .feature-tile__text {
   max-height: 5.5em;
   margin-top: 0.75em;
-  font-size: 0.75rem;
-  line-height: 1.84;
-  font-weight: 400;
-  color: var(--color-services-text);
+  @include font ($size: 0.75rem, $height: 1.84, $weight: 400);
+  color: $color-services-text;
 }
