--- a/style.css
+++ b/style.css
@@ -3,8 +3,24 @@ body {
   font-family: "Lato", Verdana, sans-serif;
 }
 
+.social-link:active, .portfolio-tab {
+  transition: all 0.15s linear;
+}
+
+.contact-link:active {
+  transition: background-color 0.15s linear;
+}
+
+.form__submit, .social-link {
+  transition: all 0.4s linear;
+}
+
 .navbar__link {
   transition: color 0.15s linear;
+}
+
+.message__btn:active {
+  transition: border-color 0.15s linear;
 }
 
 .slider__button {
@@ -13,6 +29,14 @@ body {
 
 .iphone__screen {
   transition: filter 0.4s linear;
+}
+
+.slider__item2, .slider__item1 {
+  transition: background-color 1s linear, border-color 1s linear;
+}
+
+.message__btn:hover, .form__input {
+  transition: background-color 0.4s linear, color 0.4s linear;
 }
 
 html {
@@ -160,7 +184,7 @@ img {
   padding: 2em 0 2em 0;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
-  z-index: 100;
+  z-index: 50;
 }
 
 .header__wrapper {
@@ -241,13 +265,11 @@ img {
 .slider__item1 {
   background-color: #f06c64;
   border-color: #ea676b;
-  transition: background-color 1s linear, border-color 1s linear;
 }
 
 .slider__item2 {
   background-color: #648BF0;
   border-color: #888BF0;
-  transition: background-color 1s linear, border-color 1s linear;
 }
 
 .slider__container {
@@ -260,11 +282,11 @@ img {
   height: 100px;
   width: 100px;
   position: absolute;
-  top: calc(50% - $slider-btn-height / 2 - 15px);
+  top: calc(50% - 100px / 2 - 15px);
   border-radius: 5px;
   background-image: url(./assets/images/slider-btn-left.svg);
   background-size: initial;
-  z-index: 50;
+  z-index: 20;
 }
 .slider__button--left {
   left: -40px;
@@ -282,7 +304,7 @@ img {
   outline: none;
 }
 .slider__button.pixel-perfect {
-  top: calc(50% - $slider-btn-height / 2 - 16px);
+  top: calc(50% - 100px / 2 - 16px);
 }
 
 .slider-list {
@@ -298,7 +320,7 @@ img {
 .slider-list__item {
   display: none;
   padding: 0 2.25em;
-  width: calc($content-width - 2 * $content-padding-side);
+  width: calc(1020px - 2 * 2.5em);
   flex: 0 0 auto;
   justify-content: center;
   align-items: center;
@@ -410,7 +432,6 @@ img {
   transform-origin: left 50%;
   transform: rotateZ(90deg);
 }
-
 .iphone-horizontal .iphone__screen {
   width: 333px;
   height: 188px;
@@ -432,7 +453,6 @@ img {
   top: 0;
   border-radius: 29px;
 }
-
 .iphones-container .iphone__screen {
   position: absolute;
   top: 69px;
@@ -444,13 +464,13 @@ img {
 
 .services {
   padding: 3.9em 0 1.875em 0;
-  background-color: var(--color-services-background);
-  border-bottom: 6px solid var(--color-services-border);
-  scroll-margin-top: var(--header-height);
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #fff;
+  scroll-margin-top: calc(2em + 1.5625rem + 2em + 6px);
 }
 
 .services__title {
-  color: var(--color-services-title);
+  color: #666d89;
   word-spacing: 0.005em;
   letter-spacing: -0.003125em;
 }
@@ -460,7 +480,8 @@ img {
   font-size: 1.125rem;
   line-height: 1.7;
   font-weight: 300;
-  color: var(--color-services-text);
+  font-style: normal;
+  color: #767e9e;
 }
 
 .services__features {
@@ -473,15 +494,13 @@ img {
   flex-shrink: 1;
   flex-wrap: wrap;
 }
-
 .features-list.pixel-perfect {
-  margin-left: 0.0625em;
-  margin-right: 0.0625em;
+  margin-left: 1px;
+  margin-right: 1px;
 }
 
 .features-list__item {
-  --margin-right-features-list__item: 1.25em;
-  max-width: calc((100% - 2 * var(--margin-right-features-list__item)) / 3);
+  max-width: calc((100% - 2 * 1.25em) / 3);
 }
 
 .feature-tile {
@@ -489,7 +508,6 @@ img {
   padding-left: 5em;
   position: relative;
 }
-
 .feature-tile::before {
   content: "";
   display: block;
@@ -497,40 +515,34 @@ img {
   height: 59px;
   position: absolute;
   left: 0;
-  top: 0.125em;
+  top: 2px;
   border-radius: 50%;
-  border: 2px solid var(--color-services-title);
+  border: 2px solid #666d89;
   background-position: center;
   background-repeat: no-repeat;
   background-size: initial;
 }
-
 .feature-tile--pen::before {
   background-image: url(./assets/images/pen.svg);
 }
-
 .feature-tile--bulb::before {
   background-image: url(./assets/images/bulb.svg);
 }
-
 .feature-tile--heart::before {
   background-image: url(./assets/images/heart.svg);
 }
-
 .feature-tile--mobile::before {
   background-image: url(./assets/images/mobile.svg);
 }
-
 .feature-tile--bubble::before {
   background-image: url(./assets/images/bubble.svg);
 }
-
 .feature-tile--star::before {
   background-image: url(./assets/images/star.svg);
 }
 
 .feature-tile__title {
-  color: var(--color-services-title);
+  color: #666d89;
   letter-spacing: 0.001em;
 }
 
@@ -540,18 +552,19 @@ img {
   font-size: 0.75rem;
   line-height: 1.84;
   font-weight: 400;
-  color: var(--color-services-text);
+  font-style: normal;
+  color: #767e9e;
 }
 
 .portfolio {
   padding: 3.89em 0 calc(4.1875em - 5px) 0;
-  background-color: var(--color-portfolio-background);
-  border-bottom: 6px solid var(--color-portfolio-border);
-  scroll-margin-top: var(--header-height);
+  background-color: #2d303a;
+  border-bottom: 6px solid #323746;
+  scroll-margin-top: calc(2em + 1.5625rem + 2em + 6px);
 }
 
 .portfolio__title {
-  color: var(--color-portfolio-title);
+  color: #666d89;
   letter-spacing: -0.0065em;
 }
 
@@ -560,15 +573,15 @@ img {
   font-size: 1.125rem;
   line-height: 1.67;
   font-weight: 300;
-  color: var(--color-portfolio-text);
+  font-style: normal;
+  color: #767e9e;
 }
 
 .portfolio__tabs {
   margin-top: 0.7em;
 }
-
 .portfolio__tabs.pixel-perfect {
-  padding-left: 0.0625em;
+  padding-left: 1px;
 }
 
 .tabs-list {
@@ -583,38 +596,33 @@ img {
   padding: 0.33333em 0.5em;
   display: flex;
   align-items: center;
-  border-radius: 0.41666em;
-  border: 1px solid var(--color-portfolio-title);
+  border-radius: 5px;
+  border: 1px solid #666d89;
   font-size: 0.75rem;
   line-height: 1;
   font-weight: 400;
-  color: var(--color-portfolio-text);
+  font-style: normal;
+  color: #767e9e;
   word-spacing: 0.01em;
   letter-spacing: -0.0007em;
-  transition: all 0.15s linear;
 }
-
 .portfolio-tab:focus {
-  outline: 1px solid var(--color-outline);
+  outline: 1px solid #FBC65F;
   outline-offset: 1px;
 }
-
 .portfolio-tab:hover {
   border-color: #c5c5c5;
   outline: none;
 }
-
 .portfolio-tab:active {
   border-color: #c5c5c5;
   color: #dedede;
   outline: none;
 }
-
 .portfolio-tab--active {
   border-color: #c5c5c5;
   color: #dedede;
 }
-
 .portfolio-tab--active:focus {
   outline: none;
 }
@@ -642,22 +650,17 @@ img {
   border: 5px solid transparent;
   overflow: hidden;
 }
-
 .images-list__item:focus {
-  outline: 1px solid var(--color-outline);
+  outline: 1px solid #FBC65F;
   outline-offset: -1px;
 }
-
 .images-list__item:hover {
-  outline: 1px solid var(--color-slider-background);
-  transition: outline 0.4s linear;
+  outline: 1px solid #f06c64;
   outline-offset: -1px;
+  transition: outline 0.4s linear;
 }
-
-.images-list__item:active,
-.images-list__item--active,
-.images-list__item--active:focus {
-  border-color: var(--color-slider-background);
+.images-list__item:active, .images-list__item--active, .images-list__item--active:focus {
+  border-color: #f06c64;
   outline: none;
 }
 
@@ -666,123 +669,41 @@ img {
   height: auto;
   object-fit: fill;
 }
-
 .portfolio__img--01 {
   object-position: -0.5em -0.69em;
 }
-
 .portfolio__img--02 {
   object-position: -5.13em -2.69em;
 }
-
 .portfolio__img--03 {
   object-position: -0.69em -0.063em;
 }
-
 .portfolio__img--04 {
   object-position: -1.5em -0.13em;
 }
-
 .portfolio__img--05 {
   object-position: -0.628em -1em;
 }
-
 .portfolio__img--06 {
   object-position: -1em -0.25em;
 }
-
 .portfolio__img--07 {
   object-position: -1.94em -2.44em;
 }
-
 .portfolio__img--08 {
   object-position: -1.5em -2em;
 }
-
 .portfolio__img--09 {
   object-position: -1em -0.128em;
 }
-
 .portfolio__img--10 {
   object-position: -8.816em -7.066em;
 }
-
 .portfolio__img--11 {
   object-position: -9em -10.94em;
 }
-
 .portfolio__img--12 {
   object-position: -2.25em -3.75em;
-}
-
-.about-us {
-  padding: 3.86em 0 4.2em 0;
-  background-color: var(--color-aboutUs-background);
-  border-bottom: 6px solid var(--color-aboutUs-border);
-  scroll-margin-top: var(--header-height);
-}
-
-.about-us__title {
-  color: var(--color-aboutUs-title);
-  letter-spacing: -0.0001em;
-}
-
-.about-us__text {
-  margin-top: 1.175em;
-  font-size: 1.125rem;
-  line-height: 1.667;
-  font-weight: 300;
-  color: var(--color-aboutUs-text);
-  letter-spacing: 0.0032em;
-}
-
-.about-us__employees {
-  margin-top: 2.8em;
-}
-
-.employees-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.employees-list__item {
-  --margin-right-employees-list__item: 1.25em;
-  max-width: calc((100% - 2 * var(--margin-right-employees-list__item)) / 3);
-}
-
-.employee-card__img {
-  width: 100%;
-  height: auto;
-}
-
-.employee-card__img.pixel-perfect {
-  transform: translate(-0.0625em, 0);
-}
-
-.employee-card__title {
-  margin-top: 0.8em;
-  margin-left: -0.0555em;
-  color: var(--color-aboutUs-title);
-  word-spacing: 0.04em;
-  letter-spacing: -0.006em;
-}
-
-.employee-card__text {
-  margin-top: 0.83em;
-  margin-left: -0.045em;
-  max-height: 3.5em;
-  font-size: 0.75rem;
-  line-height: 1.82;
-  font-weight: 400;
-  color: var(--color-aboutUs-text);
-}
-
-.employee-card__socials {
-  margin-top: 1.49em;
-}
-
-.employee-card__socials.pixel-perfect {
-  margin-left: 0.0625em;
 }
 
 .socials-list {
@@ -800,53 +721,117 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  border: 1px solid var(--color-aboutUs-title);
+  border: 1px solid #666d89;
   background-size: inherit;
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
-  color: #000;
   font-size: 0;
-  transition: all 0.4s linear;
+  line-height: 0;
+  font-weight: inherit;
+  font-style: normal;
+  color: #000;
 }
-
 .social-link:hover {
-  background-color: #aab7db;
+  background-color: #929ebe;
 }
-
 .social-link:active {
-  border: 2px solid var(--color-quote-background);
-  transition: border 0.1s linear;
+  border-color: #f06c64;
+  background-color: #FBC65F;
 }
-
 .social-link--facebook {
   background-image: url(./assets/images/facebook.svg);
 }
-
 .social-link--google {
   background-image: url(./assets/images/google.svg);
 }
-
 .social-link--twitter {
   background-image: url(./assets/images/twitter.svg);
 }
-
 .social-link--linkedin {
   background-image: url(./assets/images/linkedin.svg);
 }
 
+.about-us {
+  padding: 3.86em 0 4.2em 0;
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #fff;
+  scroll-margin-top: calc(2em + 1.5625rem + 2em + 6px);
+}
+
+.about-us__title {
+  color: #666d89;
+  letter-spacing: -0.0001em;
+}
+
+.about-us__text {
+  margin-top: 1.175em;
+  font-size: 1.125rem;
+  line-height: 1.667;
+  font-weight: 300;
+  font-style: normal;
+  color: #767e9e;
+  letter-spacing: 0.0032em;
+}
+
+.about-us__employees {
+  margin-top: 2.8em;
+}
+
+.employees-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.employees-list__item {
+  max-width: calc((100% - 2 * 1.25em) / 3);
+}
+
+.employee-card__img {
+  width: 100%;
+  height: auto;
+}
+.employee-card__img.pixel-perfect {
+  transform: translate(-1px, 0);
+}
+
+.employee-card__title {
+  margin-top: 0.8em;
+  margin-left: -0.0555em;
+  color: #666d89;
+  word-spacing: 0.04em;
+  letter-spacing: -0.006em;
+}
+
+.employee-card__text {
+  margin-top: 0.83em;
+  margin-left: -0.045em;
+  max-height: 3.5em;
+  font-size: 0.75rem;
+  line-height: 1.82;
+  font-weight: 400;
+  font-style: normal;
+  color: #767e9e;
+}
+
+.employee-card__socials {
+  margin-top: 1.49em;
+}
+.employee-card__socials.pixel-perfect {
+  margin-left: 1px;
+}
+
 .quote {
   padding: 3.85em 0 1.2em 0;
-  background-color: var(--color-quote-background);
-  border-bottom: 6px solid var(--color-quote-border);
-  scroll-margin-top: var(--header-height);
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+  scroll-margin-top: calc(2em + 1.5625rem + 2em + 6px);
 }
 
 .quote__title {
-  color: var(--color-quote-title);
+  color: #f0d8d9;
   letter-spacing: -0.005em;
 }
-
 .quote__title > .pixel-perfect {
   text-transform: initial;
 }
@@ -856,7 +841,8 @@ img {
   font-size: 1.125rem;
   line-height: 1.67;
   font-weight: 300;
-  color: var(--color-quote-text);
+  font-style: normal;
+  color: #f0d8d9;
 }
 
 .flex-2-column {
@@ -874,49 +860,43 @@ img {
 
 .form__input {
   padding: 0.66667em 1.25em;
-  border-radius: 0.41667em;
+  border-radius: 5px;
   border: none;
-  background-color: var(--color-quote-input-background);
+  background-color: #d6564f;
   font-size: 0.75rem;
   line-height: 1.84;
   font-weight: 400;
-  color: var(--color-quote-input-text);
+  font-style: normal;
+  color: #f48c8f;
   overflow: hidden;
-  transition: background-color 0.4s linear, color 0.4s linear;
 }
-
-.form__input + .form__input {
-  margin-top: 1rem;
-}
-
 .form__input::-ms-input-placeholder {
   color: inherit;
 }
-
 .form__input::placeholder {
   color: inherit;
 }
-
 .form__input:hover {
   background-color: #ad423d;
 }
-
 .form__input:focus {
-  color: var(--color-quote-title);
-  outline: 1px solid var(--color-outline);
+  color: #f0d8d9;
+  outline: 1px solid #FBC65F;
   outline-offset: 2px;
 }
-
 .form__input:required:focus:not(:placeholder-shown):valid {
   padding: calc(0.66667em - 2px) calc(1.25em - 2px);
   border: 2px solid green;
   outline: none;
 }
-
 .form__input:required:focus:not(:placeholder-shown):invalid {
   padding: calc(0.66667em - 2px) calc(1.25em - 2px);
   border: 2px solid red;
   outline: none;
+}
+
+.form__input + .form__input {
+  margin-top: 1rem;
 }
 
 .form__input--textarea {
@@ -928,23 +908,19 @@ img {
   resize: none;
   cursor: auto;
 }
-
 .form__input--textarea::-webkit-scrollbar {
   width: 0.85em;
 }
-
 .form__input--textarea::-webkit-scrollbar-thumb {
-  border-radius: 0.41667em;
-  background-color: var(--color-quote-text);
+  border-radius: 5px;
+  background-color: #f0d8d9;
 }
-
 .form__input--textarea:not(:focus)::-webkit-scrollbar-thumb {
   display: none;
 }
-
 .form__input--textarea::-webkit-scrollbar-track {
   background-color: inherit;
-  border-radius: 0.41667em;
+  border-radius: 5px;
 }
 
 .form__submit {
@@ -954,22 +930,20 @@ img {
   border: 1px solid transparent;
   background-color: #FBC65F;
   font-size: 0.875rem;
-  color: #886A30;
   line-height: 1;
   font-weight: 700;
+  font-style: normal;
+  color: #886A30;
   text-transform: uppercase;
   cursor: pointer;
-  transition: all 0.3s linear;
 }
-
 .form__submit:active {
-  border-color: var(--color-quote-title);
+  border-color: #f0d8d9;
   outline: none;
 }
-
 .form__submit:hover {
-  color: var(--color-quote-title);
-  background-color: var(--color-footer-background);
+  color: #f0d8d9;
+  background-color: #2d303a;
   outline: none;
 }
 
@@ -978,7 +952,7 @@ img {
 }
 
 .contacts__title {
-  color: var(--color-quote-title);
+  color: #f0d8d9;
   letter-spacing: -0.002em;
 }
 
@@ -987,11 +961,11 @@ img {
   font-size: 0.75rem;
   line-height: 1.8334;
   font-weight: 400;
-  color: var(--color-quote-text);
+  font-style: normal;
+  color: #f0d8d9;
   text-align: justify;
   letter-spacing: -0.02em;
 }
-
 .contacts__text::first-line {
   line-height: 1.75;
 }
@@ -1005,19 +979,18 @@ img {
   position: relative;
   padding-left: 0.33333em;
   padding-right: 0.33333em;
-  border-radius: 0.4em;
+  border-radius: 4px;
   font-size: 0.75rem;
   line-height: 1.6;
   font-weight: 400;
-  color: var(--color-quote-text);
+  font-style: normal;
+  color: #f0d8d9;
   letter-spacing: 0.005em;
 }
-
 .contact-link.pixel-perfect {
   line-height: 2.1;
   letter-spacing: -0.01em;
 }
-
 .contact-link::before {
   content: "";
   display: block;
@@ -1028,32 +1001,26 @@ img {
   background-repeat: no-repeat;
   transform: translateX(calc(-50% - 0.5px));
 }
-
 .contact-link--location::before {
   width: 7px;
   height: 11px;
   background-image: url(./assets/images/location.svg);
 }
-
 .contact-link--phone::before {
   width: 11px;
   height: 11px;
   background-image: url(./assets/images/phone.svg);
 }
-
 .contact-link--mail::before {
   width: 13px;
   height: 8px;
   background-image: url(./assets/images/mail.svg);
 }
-
 .contact-link:hover {
   text-decoration: underline;
 }
-
 .contact-link:active {
-  background-color: var(--color-quote-input-background);
-  transition: background-color 0.2s linear;
+  background-color: #d6564f;
 }
 
 .modal--hidden {
@@ -1077,14 +1044,14 @@ img {
   padding: 2em 2.5em;
   max-width: 40vw;
   border-radius: 5px;
-  border: 1px solid var(--color-quote-text);
-  background-color: var(--color-quote-background);
+  border: 1px solid #f0d8d9;
+  background-color: #f06c64;
 }
 
 .message__title {
   padding-right: 1em;
   margin-bottom: 1.5em;
-  color: var(--color-quote-title);
+  color: #f0d8d9;
   text-transform: uppercase;
   word-spacing: 0.5em;
 }
@@ -1094,32 +1061,29 @@ img {
   font-size: 1.125rem;
   line-height: 1.4;
   font-weight: 400;
-  color: var(--color-quote-text);
+  font-style: normal;
+  color: #f0d8d9;
   word-wrap: break-word;
   cursor: auto;
 }
-
-.message__text + .message__text {
-  margin-top: 1.3em;
-}
-
 .message__text--limit-height {
   max-height: 30vh;
   padding-right: calc(1em - 8px);
   overflow-y: scroll;
 }
-
 .message__text--limit-height::-webkit-scrollbar {
   width: 8px;
 }
-
 .message__text--limit-height::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: var(--color-quote-title);
+  background-color: #f0d8d9;
 }
-
 .message__text--limit-height::-webkit-scrollbar-track {
   background-color: inherit;
+}
+
+.message__text + .message__text {
+  margin-top: 1.3em;
 }
 
 .message__btn {
@@ -1127,28 +1091,25 @@ img {
   margin-top: 3em;
   margin-right: 1.2857em;
   padding: 0.75em 2.5em;
-  border-radius: 0.41667em;
+  border-radius: 5px;
   border: 1px solid transparent;
   background-color: #FBC65F;
   font-size: 0.875rem;
   line-height: 1;
   font-weight: 700;
+  font-style: normal;
   color: #886A30;
   text-transform: uppercase;
   overflow: hidden;
   cursor: pointer;
 }
-
 .message__btn:active {
-  border-color: var(--color-quote-text);
-  transition: border-color 0.2s linear;
+  border-color: #f0d8d9;
   outline: none;
 }
-
 .message__btn:hover {
-  color: var(--color-quote-text);
-  background-color: var(--color-footer-background);
-  transition: background-color 0.2s linear, color 0.2s linear;
+  color: #f0d8d9;
+  background-color: #2d303a;
   outline: none;
 }
 
