--- a/style.scss
+++ b/style.scss
@@ -22,5 +22,8 @@
 @import "./sass/components/portfolio";
 @import "./sass/components/socials-list";
 @import "./sass/components/about-us";
+@import "./sass/components/employee-card";
 @import "./sass/components/get-a-quote";
+@import "./sass/components/form";
+@import "./sass/components/contacts";
 @import "./sass/components/form-modal";
