--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,7 @@
 // Components
 @import "./sass/components/navbar";
 @import "./sass/components/slider";
+@import "./sass/components/slider-button";
 @import "./sass/components/services";
 @import "./sass/components/portfolio";
 @import "./sass/components/socials-list";
