--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,10 +1,22 @@
 
 .slider {
-  height: 37.5em;
-  padding: 3.3125em 0 2.375em 0;
   background-color: $color-slider-background;
-  border-bottom: 6px solid $color-slider-border;
+  border-bottom-style: solid;
+  border-bottom-color: $color-slider-border;
   scroll-margin-top: $header-height;
+  
+  @include media-laptop-max {
+    height: 600px;
+    padding: 54px 0 27px 0;
+    border-bottom-width: 6px;
+  }
+
+  @include media-laptop {
+    height: calc(100vw * 600 / 1020);
+    padding-top: calc(100vw * 54 / 1020);
+    padding-bottom: calc(100vw * 27 / 1020);
+    border-bottom-width: calc(100vw * 6 / 1020);
+  }
 }
 
 .slider__item1 {
@@ -22,43 +34,6 @@
 .slider__container {
   position: relative;
   width: 100%;
-  height: 513px;
-}
-
-$slider-btn-height: 100px;
-.slider__button {
-  height: $slider-btn-height;
-  width: 100px;
-  position: absolute;
-  top: calc(50% - #{$slider-btn-height} / 2 - 15px);
-  border-radius: 5px;
-  background-image: url(./assets/images/slider-btn-left.svg);
-  background-size: initial;
-  z-index: $z-index-slider-button;
-  @extend %transition-bgColor-400-linear;
-
-  &--left {
-    left: -40px;
-  }
-
-  &--right {
-    right: -42px;
-    transform: rotate(180deg);
-  }
-
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.25);
-    outline: none;
-  }
-  
-  &:active {
-    background-size: 12.5%;
-    outline: none;
-  }
-
-  &.pixel-perfect {
-    top: calc(50% - #{$slider-btn-height} / 2 - 16px);
-  }
 }
 
 .slider-list {
@@ -73,12 +48,20 @@ $slider-btn-height: 100px;
 
 .slider-list__item {
   display: none;
-  padding: 0 2.25em;
-  width: calc(#{$content-width} - 2 * #{$content-padding-side});
-  flex: 0 0 auto;
+  width: 100%;
   justify-content: center;
   align-items: center;
   animation: 1s ease-in-out;
+
+  &:first-child {
+    @include media-laptop-max {
+      padding-bottom: 30px;
+    }
+
+    @include media-laptop {
+      padding-bottom: calc(100vw * 30 / 1020);
+    }
+  }
 }
 
 .slider--active,
@@ -129,101 +112,125 @@ $slider-btn-height: 100px;
   }
 }
 
-.iphone-vertical {
-  margin: 0 2.25em;
-  height: 483px;
-  width: 240px;
+.phone-container {
   position: relative;
+  font-size: 0;
 }
 
-.iphone__shadow {
-  position: absolute;
-  left: 0;
-  top: 0;
+.phone-container + .phone-container {
+  @include media-laptop-max {
+    margin-left: 72px;
+  }
+  
+  @include media-laptop {
+    margin-left: calc(100vw * 72 / 1020);
+  }
+
+  @include media-mobile {
+    margin-left: calc( 26.47px - 26.47 * ( 375px - 100vw ) / 55 );
+  }
+
+  @include media-mobile-small {
+    margin-left: 0;
+  }
 }
 
-.iphone__base {
+.phone__shadow {
+  object-fit: contain;
+
+  &.phone-vertical {
+    @include media-laptop-max {
+      width: 240px;
+      height: 483px;
+    }
+    
+    @include media-laptop {
+      width: calc(100vw * 240 / 1020);
+      height: calc(100vw * 483 / 1020);
+    }
+  }
+
+  &.phone-horizontal {
+    @include media-laptop-max {
+      width: 483px;
+      height: 240px;
+    }
+    
+    @include media-laptop {
+      width: calc(100vw * 483 / 1020);
+      height: calc(100vw * 240 / 1020);
+    }
+  }
+
+  &.phones-vertical {
+    @include media-laptop-max {
+      width: 517px;
+      height: 513px;
+    }
+    
+    @include media-laptop {
+      width: calc(100vw * 517 / 1020);
+      height: calc(100vw * 513 / 1020);
+    }
+  }
+}
+
+.phone__base {
   position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 26px;
+  height: auto;
   z-index: $z-index-iphone-base;
   cursor: pointer;
+  
+  &.phone-vertical {
+    width: calc( 215 / 240 * 100%);
+    top: 0;
+    left: 0;
+    border-radius: calc( 26 / 215 * 100%) / calc(26 / 458 * 100%);
+  }
+
+  &.phone-horizontal {
+    width: calc( 458 / 483 * 100%);
+    top: 0;
+    left: 0;
+    border-radius: calc( 26 / 458 * 100%) / calc( 26 / 215 * 100%);
+  }
+
+  &.phones-vertical {
+    width: calc( 229 / 517 * 100% );
+    top: 0;
+    left: calc( 130.47 / 517 * 100%);
+    border-radius: calc( 29 / 229 * 100%) / calc( 29 / 486 * 100%);
+  }
 }
 
-.iphone__screen {
-  height: 333px;
-  width: 188px;
+.phone__display {
   position: absolute;
-  top: 65px;
-  left: 14px;
-  object-fit: none;
-  object-position: -14px -135px;
   z-index: $z-index-iphone-screen;
   cursor: pointer;
   @extend %transition-filter-400-linear;
+  
+  &.phone-vertical {
+    height: 68.944%;
+    width: 78.333%;
+    top: 13.46%;
+    left: 5.84%;
+  }
+
+  &.phone-horizontal {
+    width: 68.944%;
+    height: 78.333%;
+    top: 5.84%;
+    left: 12.43%;
+  }
+
+  &.phones-vertical {
+    width: calc( 201 / 517 * 100% );
+    height: calc( 354 / 513 * 100% );
+    top: calc( 68.7 / 513 * 100%);
+    left: calc( 144.3 / 517 * 100%);
+  }
 
   &--off {
     filter: opacity(0);
-  }
-}
-
-.iphone-horizontal {
-  margin: 0 2.25em;
-  height: 240px;
-  width: 484px;
-  position: relative;
-}
-
-.iphone-horizontal {
-  .iphone__shadow {
-    position: absolute;
-    left: calc(50% + 2px);
-    top: calc(-100% - 2px);
-    transform-origin: left 50%;
-    transform: rotateY(180deg) rotateZ(90deg);
-  }
-}
-
-.iphone-horizontal {
-  .iphone__base {
-    position: absolute;
-    left: calc(50% - 12px);
-    top: calc(-100% + 10px);
-    transform-origin: left 50%;
-    transform: rotateZ(90deg);
-  }
-
-  .iphone__screen {
-    width: 333px;
-    height: 188px;
-    position: absolute;
-    top: 13px;
-    left: 61px;
-    object-fit: none;
-    object-position: -125px -119px;
-  }
-}
-
-.iphones-container {
-  margin: 0 2.25em;
-  position: relative;
-}
-
-.iphones-container {
-  .iphone__base {
-    position: absolute;
-    left: 131px;
-    top: 0;
-    border-radius: 29px;
-  }
-
-  .iphone__screen {
-    position: absolute;
-    top: 69px;
-    left: 145px;
-    width: 201px;
-    height: 354px;
-    object-position: initial;
   }
 }
