--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   transition: background-color 0.4s linear;
 }
 
-.iphone__screen {
+.phone__display {
   transition: filter 0.4s linear;
 }
 
@@ -175,7 +175,17 @@ img {
 .wrapper {
   max-width: 1020px;
   margin: 0 auto;
-  padding: 0 2.5em;
+  padding: 0 40px;
+}
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 0 calc( 40px - 10 * ( 768px - 100vw) / 393 );
+  }
+}
+@media (max-width: 375px) {
+  .wrapper {
+    padding: 0 30px;
+  }
 }
 
 .header {
@@ -255,11 +265,25 @@ img {
 }
 
 .slider {
-  height: 37.5em;
-  padding: 3.3125em 0 2.375em 0;
   background-color: #f06c64;
-  border-bottom: 6px solid #ea676b;
+  border-bottom-style: solid;
+  border-bottom-color: #ea676b;
   scroll-margin-top: calc(2em + 1.5625rem + 2em + 6px);
+}
+@media (min-width: 1020px) {
+  .slider {
+    height: 600px;
+    padding: 54px 0 27px 0;
+    border-bottom-width: 6px;
+  }
+}
+@media (max-width: 1020px) {
+  .slider {
+    height: calc(100vw * 600 / 1020);
+    padding-top: calc(100vw * 54 / 1020);
+    padding-bottom: calc(100vw * 27 / 1020);
+    border-bottom-width: calc(100vw * 6 / 1020);
+  }
 }
 
 .slider__item1 {
@@ -275,36 +299,6 @@ img {
 .slider__container {
   position: relative;
   width: 100%;
-  height: 513px;
-}
-
-.slider__button {
-  height: 100px;
-  width: 100px;
-  position: absolute;
-  top: calc(50% - 100px / 2 - 15px);
-  border-radius: 5px;
-  background-image: url(./assets/images/slider-btn-left.svg);
-  background-size: initial;
-  z-index: 20;
-}
-.slider__button--left {
-  left: -40px;
-}
-.slider__button--right {
-  right: -42px;
-  transform: rotate(180deg);
-}
-.slider__button:hover {
-  background-color: rgba(255, 255, 255, 0.25);
-  outline: none;
-}
-.slider__button:active {
-  background-size: 12.5%;
-  outline: none;
-}
-.slider__button.pixel-perfect {
-  top: calc(50% - 100px / 2 - 16px);
 }
 
 .slider-list {
@@ -319,12 +313,20 @@ img {
 
 .slider-list__item {
   display: none;
-  padding: 0 2.25em;
-  width: calc(1020px - 2 * 2.5em);
-  flex: 0 0 auto;
+  width: 100%;
   justify-content: center;
   align-items: center;
   animation: 1s ease-in-out;
+}
+@media (min-width: 1020px) {
+  .slider-list__item:first-child {
+    padding-bottom: 30px;
+  }
+}
+@media (max-width: 1020px) {
+  .slider-list__item:first-child {
+    padding-bottom: calc(100vw * 30 / 1020);
+  }
 }
 
 .slider--active,
@@ -373,93 +375,193 @@ img {
     left: 0;
   }
 }
-.iphone-vertical {
-  margin: 0 2.25em;
-  height: 483px;
-  width: 240px;
+.phone-container {
   position: relative;
+  font-size: 0;
 }
 
-.iphone__shadow {
-  position: absolute;
-  left: 0;
-  top: 0;
+@media (min-width: 1020px) {
+  .phone-container + .phone-container {
+    margin-left: 72px;
+  }
+}
+@media (max-width: 1020px) {
+  .phone-container + .phone-container {
+    margin-left: calc(100vw * 72 / 1020);
+  }
+}
+@media (max-width: 375px) {
+  .phone-container + .phone-container {
+    margin-left: calc( 26.47px - 26.47 * ( 375px - 100vw ) / 55 );
+  }
+}
+@media (max-width: 320px) {
+  .phone-container + .phone-container {
+    margin-left: 0;
+  }
 }
 
-.iphone__base {
+.phone__shadow {
+  object-fit: contain;
+}
+@media (min-width: 1020px) {
+  .phone__shadow.phone-vertical {
+    width: 240px;
+    height: 483px;
+  }
+}
+@media (max-width: 1020px) {
+  .phone__shadow.phone-vertical {
+    width: calc(100vw * 240 / 1020);
+    height: calc(100vw * 483 / 1020);
+  }
+}
+@media (min-width: 1020px) {
+  .phone__shadow.phone-horizontal {
+    width: 483px;
+    height: 240px;
+  }
+}
+@media (max-width: 1020px) {
+  .phone__shadow.phone-horizontal {
+    width: calc(100vw * 483 / 1020);
+    height: calc(100vw * 240 / 1020);
+  }
+}
+@media (min-width: 1020px) {
+  .phone__shadow.phones-vertical {
+    width: 517px;
+    height: 513px;
+  }
+}
+@media (max-width: 1020px) {
+  .phone__shadow.phones-vertical {
+    width: calc(100vw * 517 / 1020);
+    height: calc(100vw * 513 / 1020);
+  }
+}
+
+.phone__base {
   position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 26px;
+  height: auto;
   z-index: 5;
   cursor: pointer;
 }
+.phone__base.phone-vertical {
+  width: calc( 215 / 240 * 100%);
+  top: 0;
+  left: 0;
+  border-radius: calc( 26 / 215 * 100%)/calc(26 / 458 * 100%);
+}
+.phone__base.phone-horizontal {
+  width: calc( 458 / 483 * 100%);
+  top: 0;
+  left: 0;
+  border-radius: calc( 26 / 458 * 100%)/calc( 26 / 215 * 100%);
+}
+.phone__base.phones-vertical {
+  width: calc( 229 / 517 * 100% );
+  top: 0;
+  left: calc( 130.47 / 517 * 100%);
+  border-radius: calc( 29 / 229 * 100%)/calc( 29 / 486 * 100%);
+}
 
-.iphone__screen {
-  height: 333px;
-  width: 188px;
+.phone__display {
   position: absolute;
-  top: 65px;
-  left: 14px;
-  object-fit: none;
-  object-position: -14px -135px;
   z-index: 10;
   cursor: pointer;
 }
-.iphone__screen--off {
+.phone__display.phone-vertical {
+  height: 68.944%;
+  width: 78.333%;
+  top: 13.46%;
+  left: 5.84%;
+}
+.phone__display.phone-horizontal {
+  width: 68.944%;
+  height: 78.333%;
+  top: 5.84%;
+  left: 12.43%;
+}
+.phone__display.phones-vertical {
+  width: calc( 201 / 517 * 100% );
+  height: calc( 354 / 513 * 100% );
+  top: calc( 68.7 / 513 * 100%);
+  left: calc( 144.3 / 517 * 100%);
+}
+.phone__display--off {
   filter: opacity(0);
 }
 
-.iphone-horizontal {
-  margin: 0 2.25em;
-  height: 240px;
-  width: 484px;
-  position: relative;
-}
-
-.iphone-horizontal .iphone__shadow {
+.slider__button {
+  height: 100px;
+  width: 70px;
   position: absolute;
-  left: calc(50% + 2px);
-  top: calc(-100% - 2px);
-  transform-origin: left 50%;
-  transform: rotateY(180deg) rotateZ(90deg);
+  top: calc(50% - 100px / 2 - 15px);
+  border-radius: 5px;
+  background-image: url(./assets/images/slider-btn-left.svg);
+  background-size: initial;
+  z-index: 20;
 }
-
-.iphone-horizontal .iphone__base {
-  position: absolute;
-  left: calc(50% - 12px);
-  top: calc(-100% + 10px);
-  transform-origin: left 50%;
-  transform: rotateZ(90deg);
+@media (max-width: 1020px) {
+  .slider__button {
+    top: calc(50% - 100px / 2 - 100vw * 15 / 1020 );
+  }
 }
-.iphone-horizontal .iphone__screen {
-  width: 333px;
-  height: 188px;
-  position: absolute;
-  top: 13px;
-  left: 61px;
-  object-fit: none;
-  object-position: -125px -119px;
+@media (max-width: 768px) {
+  .slider__button {
+    width: calc( 70px - ( 768px - 100vw) * ( 70 - 32 ) / ( 768 - 375 ));
+  }
 }
-
-.iphones-container {
-  margin: 0 2.25em;
-  position: relative;
+@media (max-width: 375px) {
+  .slider__button {
+    width: 32px;
+  }
 }
-
-.iphones-container .iphone__base {
-  position: absolute;
-  left: 131px;
-  top: 0;
-  border-radius: 29px;
+.slider__button--left {
+  left: -27px;
 }
-.iphones-container .iphone__screen {
-  position: absolute;
-  top: 69px;
-  left: 145px;
-  width: 201px;
-  height: 354px;
-  object-position: initial;
+@media (max-width: 1020px) {
+  .slider__button--left {
+    left: calc( -27px + ( 100vw - 1020px ) * 12 / ( 1020 - 768 ) );
+  }
+}
+@media (max-width: 768px) {
+  .slider__button--left {
+    left: calc( -39px + 10 * ( 768px - 100vw ) / 393 );
+  }
+}
+@media (max-width: 375px) {
+  .slider__button--left {
+    left: calc( 1px - 30px );
+  }
+}
+.slider__button--right {
+  transform: rotate(180deg);
+  right: -27px;
+}
+@media (max-width: 1020px) {
+  .slider__button--right {
+    right: calc( -27px + ( 100vw - 1020px ) * 12 / ( 1020 - 768 ) );
+  }
+}
+@media (max-width: 768px) {
+  .slider__button--right {
+    right: calc( -39px + 10 * ( 768px - 100vw ) / 393 );
+  }
+}
+@media (max-width: 375px) {
+  .slider__button--right {
+    right: calc( 1px - 30px );
+  }
+}
+.slider__button:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+  outline: none;
+}
+.slider__button:active {
+  background-size: 12.5%;
+  outline: none;
 }
 
 .services {
